tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/ap-northeast-1/ec2-describe-internet-gateways.json
{
    "InternetGateways": [
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-33f1f154"
                }
            ],
            "InternetGatewayId": "igw-df737cbb",
            "OwnerId": "167389268608",
            "Tags": []
        }
    ]
}
