tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/ap-northeast-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-59a48723",
                    "NetworkAclId": "acl-dfa213b9",
                    "SubnetId": "subnet-7edd0955"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-5ea48724",
                    "NetworkAclId": "acl-dfa213b9",
                    "SubnetId": "subnet-90c10cd8"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-58a48722",
                    "NetworkAclId": "acl-dfa213b9",
                    "SubnetId": "subnet-d539068e"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-dfa213b9",
            "OwnerId": "167389268608",
            "Tags": [],
            "VpcId": "vpc-33f1f154"
        }
    ]
}
